fixed overflow

--- a/src/containers/about/styles.scss
+++ b/src/containers/about/styles.scss
@@ -102,6 +102,7 @@
 @media only screen and (max-width: 768px) {
     .about__content{
         flex-direction: column;
+        overflow-x: hidden;
 
         &__personalWrapper, &__servicesWrapper{
             width: 100%;
